Changed packages in order to get a clean directory separation between component (corbaNotifyTestComp.jar) and non-component (corbaNotify.jar) files: - acs.benchmark.nc.supplier renamed to acs.benchmark.nc.comp.publisher - acs.benchmark.nc.consumer renamed to acs.benchmark.nc.comp.subscriber - CorbaNotifyBaseImpl.java moved from acs.benchmark.nc to acs.benchmark.nc.comp - PubSubExecutor.java moved from acs.benchmark.nc to acs.benchmark.nc.client Also added JLIBS directive in the Makefile, to ensure that castor classes are available when building the client jar.
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@182932 523d945c-050c-4681-91ec-863ad3bb968a

--- a/Benchmark/corbaNotify/src/Makefile
+++ b/Benchmark/corbaNotify/src/Makefile
@@ -120,14 +120,16 @@ USER_IDL =
 # Component jarfiles
 #
 COMPONENTS_JARFILES = corbaNotifyTestComp
-corbaNotifyTestComp_DIRS = acs/benchmark/nc
+corbaNotifyTestComp_DIRS = acs/benchmark/nc/comp
 
 #
 # Jarfiles and their directories
 #
-JARFILES=
-jjj_DIRS=
-jjj_EXTRAS=
+JARFILES = corbaNotify
+corbaNotify_DIRS = acs/benchmark/nc/client
+corbaNotify_EXTRAS=
+corbaNotify_JLIBS = pubSubConfigBind
+
 
 # For expressing dependencies between jarfiles (parallel builds)
 corbaNotifyTestComp_JLIBS = corbaNotifyTest_if
@@ -144,6 +146,7 @@ XML_IDL=
 # Java Component Helper Classes generation on/off
 #
 COMPONENT_HELPERS=
+
 #
 # Java Entity Classes generation config file
 #
