Adding adapter (factory, custom logger) that allows integration of log4j logs produced by 3rd party code into the ACS logging framework.
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@184265 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acsjlog/.classpath
+++ b/LGPL/CommonSoftware/acsjlog/.classpath
@@ -25,5 +25,10 @@
 	<classpathentry kind="var" path="ACSROOT/lib/ACSErrTypeCommon.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/slf4j-api-1.5.8.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/logging_idl.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/acsASsources.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/hamcrest-library-1.3.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/commons-lang-2.5.jar"/>
+	<classpathentry kind="var" path="INTROOT/lib/log4j-1.2.15.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="output" path="object/eclipseOut"/>
 </classpath>
