--- a/LGPL/CommonSoftware/acsGUIs/AlarmsProfiler/src/project.properties
+++ b/LGPL/CommonSoftware/acsGUIs/AlarmsProfiler/src/project.properties
@@ -27,6 +27,7 @@ acs.jars.required  = \
   acsjms.jar \
   acsnc.jar \
   acsncErrType.jar \
+  acsncSchemaBindings.jar \
   acsAlarmClients.jar \
   acsAlarmService.jar \
   acsASsources.jar \
@@ -35,6 +36,7 @@ acs.jars.required  = \
   alarmsysteminterface.jar \
   avalon-framework.jar \
   AcsAlarmSystem.jar \
+  acsErrTypeLifeCycle.jar \
   AcsNCTraceLogLTS.jar \
   ACSErrTypeCommon.jar \
   ACSErrTypeCORBA.jar \
@@ -47,7 +49,11 @@ acs.jars.required  = \
   cdbDAL.jar \
   cdbErrType.jar \
   cmwmom.jar \
+  commons-beanutils-1.8.3.jar \
+  commons-digester-2.1.jar \
+  commons-jexl-1.1.jar \
   commons-logging-1.1.1.jar \
+  commons-scxml-0.9.jar \
   CDB.jar \
   jacorb.jar \
   jcont.jar \
@@ -69,4 +75,5 @@ acs.jars.required  = \
   NotifyMonitoringExt.jar \
   repeatGuard.jar \
   selector-1.1.jar \
+  xalan.jar \
   xercesImpl.jar
