--- a/LGPL/Tools/scxml_apache/src/Makefile
+++ b/LGPL/Tools/scxml_apache/src/Makefile
@@ -65,7 +65,8 @@ install : install_all
 
 # We construct the classpath outside of ANT to avoid that the build.xml script will try to download the required jar files from the web.
 # See "build.sysclasspath=only" below. An alternative would be to patch the build.xml file.
-REMOTE_JARS_CLASSPATH = $(ACSROOT)/lib/commons-logging-1.1.1.jar:$(ACSROOT)/lib/xalan.jar:$(ACSROOT)/lib/commons-digester-2.1.jar:$(ACSROOT)/lib/commons-beanutils-1.8.3.jar:$(ACSROOT)/lib/commons-jexl-1.1.jar
+REMOTE_JARS_CLASSPATH = $(shell acsGetSpecificJars : commons-logging-1.1.1.jar:xalan.jar:commons-digester-2.1.jar:commons-beanutils-1.8.3.jar:commons-jexl-1.1.jar)
+
 
 # For the local path we need a few jars that do not need to be installed though. 
 # Uncomment the next 3 lines to include all of these jars, whereas now we just list them explicitly.
