Temporarily rolled back yesterday's change of the classpath derivation for REMOTE_JARS_CLASSPATH, because we have a module dependency problem that will require refactoring after the SVN migration.
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@184894 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/Tools/scxml_apache/src/Makefile
+++ b/LGPL/Tools/scxml_apache/src/Makefile
@@ -65,7 +65,11 @@ install : install_all
 
 # We construct the classpath outside of ANT to avoid that the build.xml script will try to download the required jar files from the web.
 # See "build.sysclasspath=only" below. An alternative would be to patch the build.xml file.
-REMOTE_JARS_CLASSPATH = $(shell acsGetSpecificJars : commons-logging-1.1.1.jar:xalan.jar:commons-digester-2.1.jar:commons-beanutils-1.8.3.jar:commons-jexl-1.1.jar)
+REMOTE_JARS_CLASSPATH = $(ACSROOT)/lib/commons-logging-1.1.1.jar:$(ACSROOT)/lib/xalan.jar:$(ACSROOT)/lib/commons-digester-2.1.jar:$(ACSROOT)/lib/commons-beanutils-1.8.3.jar:$(ACSROOT)/lib/commons-jexl-1.1.jar
+# The following way of getting the classpath is more flexible, but requires a module refactoring 
+# because acsGetSpecificJars depends on ACS/LGPL/CommonSoftware/acsutilpy/src/AcsutilPy/FindFile.py
+# On 2013-01-16 Ale and Heiko decided to tackle this after the SVN migration.
+# REMOTE_JARS_CLASSPATH = $(shell acsGetSpecificJars : commons-logging-1.1.1.jar:xalan.jar:commons-digester-2.1.jar:commons-beanutils-1.8.3.jar:commons-jexl-1.1.jar)
 
 
 # For the local path we need a few jars that do not need to be installed though. 
