Removed TMCDBCOMMON_IDL.h from the list of include files.
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@185982 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/monitoring/monicd/ws/src/Makefile
+++ b/LGPL/CommonSoftware/monitoring/monicd/ws/src/Makefile
@@ -1,7 +1,7 @@
 #*******************************************************************************
 # PPPPPPPP
 #
-# "@(#) $Id: Makefile,v 1.6 2012/03/02 14:05:15 tstaig Exp $"
+# "@(#) $Id: Makefile,v 1.7 2013/02/06 13:32:34 acaproni Exp $"
 #
 # Makefile of ........
 #
@@ -51,7 +51,7 @@ xxxxx_LIBS      =
 #
 # Includes (.h) files (public only)
 # ---------------------------------
-INCLUDES        = TMCDBCOMMON_IDL.h
+INCLUDES        = 
 
 #
 # Libraries (public and local)
