cern removed from the list of folders of the jar
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@186037 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/ACSLaser/laser-core/test/Makefile
+++ b/LGPL/CommonSoftware/ACSLaser/laser-core/test/Makefile
@@ -158,7 +158,7 @@ USER_IDL =
 # Jarfiles and their directories
 #
 JARFILES= lasercoretest
-lasercoretest_DIRS=alma com cern
+lasercoretest_DIRS=alma com
 #
 # java sources in Jarfile on/off
 DEBUG= 
