--- a/LGPL/Kit/acs/test/MakefileInstallTest
+++ b/LGPL/Kit/acs/test/MakefileInstallTest
@@ -16,13 +16,13 @@
 # License along with this library; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307  USA
 #
-# "@(#) $Id: MakefileInstallTest,v 1.1 2013/02/04 09:36:33 eallaert Exp $"
+# "@(#) $Id: MakefileInstallTest,v 1.2 2013/02/11 12:43:07 eallaert Exp $"
 #
 # Makefile of ........
 #
 # who       when        what
 # --------  ----------  ----------------------------------------------
-# ealalert  2013-01-22  created
+# eallaert  2013-01-22  created
 #
 
 #*******************************************************************************
@@ -177,12 +177,17 @@ CSOURCENAMES = \
 # INCLUDE STANDARDS
 # -----------------
 
-MAKEDIRTMP := $(shell searchFile include/acsMakefile)
-ifneq ($(MAKEDIRTMP),\#error\#)
-   MAKEDIR := $(MAKEDIRTMP)/include
-   include $(MAKEDIR)/acsMakefile
-endif
-
+# As this makefile is used by a make that can also run within NRI, it can be that
+# the acsMakefile will not be found by searchFile (could be that also searchFile
+# itself is not found).
+# So better force MAKEDIR to refer to the include-dir of this module.
+###MAKEDIRTMP := $(shell searchFile include/acsMakefile)
+###ifneq ($(MAKEDIRTMP),\#error\#)
+###   MAKEDIR := $(MAKEDIRTMP)/include
+###   include $(MAKEDIR)/acsMakefile
+###endif
+MAKEDIR := ../include
+include $(MAKEDIR)/acsMakefile
 #
 # TARGETS
 # -------
