Added acsErrTypeLifeCycle.jar as a dependency for acsContainerServices.jar. Last night's NRI build on alma64 seems to have brought out this problem for the first time, with message "alma/acs/nc/AcsEventSubscriber.java:24: package alma.acsErrTypeLifeCycle.wrappers does not exist  import alma.acsErrTypeLifeCycle.wrappers.AcsJEventSubscriptionEx;" Note that the Makefile was resilient and eventually built acsContainerServices.jar during the installation phase.
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@186264 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acsContainerServices/ws/src/Makefile
+++ b/LGPL/CommonSoftware/acsContainerServices/ws/src/Makefile
@@ -1,7 +1,7 @@
 #*******************************************************************************
 # PPPPPPPP
 #
-# "@(#) $Id: Makefile,v 1.12 2012/10/05 15:22:09 hsommer Exp $"
+# "@(#) $Id: Makefile,v 1.13 2013/02/14 09:38:42 hsommer Exp $"
 #
 # Makefile of ........
 #
@@ -128,7 +128,7 @@ USER_IDL =
 JARFILES=acsContainerServices 
 acsContainerServices_DIRS = alma
 acsContainerServices_EXTRAS = alma/acs/nc/sm/generated/EventSubscriberSCXML.xml
-acsContainerServices_JLIBS = JavaContainerError
+acsContainerServices_JLIBS = acsErrTypeLifeCycle JavaContainerError
 
 #
 # java sources in Jarfile on/off
