Added commons-lang jar, because EventModel now uses StringUtils class
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@186338 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acsGUIs/eventGUI/src/project.properties
+++ b/LGPL/CommonSoftware/acsGUIs/eventGUI/src/project.properties
@@ -5,7 +5,7 @@
 ## 
 ## European Southern Observatory
 ## A. Caproni 12/02/2009
-## $Id: project.properties,v 1.14 2012/10/07 07:51:43 hsommer Exp $
+## $Id: project.properties,v 1.15 2013/02/15 15:45:16 hsommer Exp $
 ##
 #################################################
 
@@ -60,5 +60,5 @@ acs.jars.required  = jacorb.jar \
  NotifyMonitoringExt.jar \
  Monitor_Types.jar \
  slf4j-acs.jar \
- slf4j-api-1.5.8.jar
- 
+ slf4j-api-1.5.8.jar \
+ commons-lang-2.5.jar
