Ported to new NCSubscriber, see JIRA:COMP-8995
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@186424 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acsGUIs/eventGUI/src/project.properties
+++ b/LGPL/CommonSoftware/acsGUIs/eventGUI/src/project.properties
@@ -5,7 +5,7 @@
 ## 
 ## European Southern Observatory
 ## A. Caproni 12/02/2009
-## $Id: project.properties,v 1.15 2013/02/15 15:45:16 hsommer Exp $
+## $Id: project.properties,v 1.16 2013/02/19 12:11:31 hsommer Exp $
 ##
 #################################################
 
@@ -61,4 +61,11 @@ acs.jars.required  = jacorb.jar \
  Monitor_Types.jar \
  slf4j-acs.jar \
  slf4j-api-1.5.8.jar \
- commons-lang-2.5.jar
+ commons-scxml-0.9.jar \
+ acsErrTypeLifeCycle.jar \
+ commons-lang-2.5.jar \
+ commons-logging-1.1.1.jar \
+ commons-digester-2.1.jar \
+ commons-beanutils-1.8.3.jar \
+ commons-jexl-1.1.jar \
+ xalan.jar
