--- a/LGPL/CommonSoftware/jlogEngine/test/Makefile
+++ b/LGPL/CommonSoftware/jlogEngine/test/Makefile
@@ -19,7 +19,7 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, 
 # MA 02111-1307  USA
 #
-# "@(#) $Id: Makefile,v 1.41 2013/02/25 14:07:56 acaproni Exp $" 
+# "@(#) $Id: Makefile,v 1.42 2013/02/25 15:39:40 acaproni Exp $" 
 #
 # Makefile of lcTest for jlog.
 #
@@ -73,7 +73,8 @@ SCRIPTS_L       =	jlogLogEntryTest \
 					jlogEngineProfiler \
 					jlogTestCacheFile \
 					jlogTestEngineCacheNotification \
-					jlogTestFilter
+					jlogTestFilter \
+					jlogTestFiltersVector
 
 #>>>>> END OF standard rules
   
