--- a/LGPL/CommonSoftware/acsstartup/src/Makefile
+++ b/LGPL/CommonSoftware/acsstartup/src/Makefile
@@ -1,7 +1,7 @@
 #*******************************************************************************
 # E.S.O. - ACS project
 #
-# "@(#) $Id: Makefile,v 1.61 2012/05/08 08:01:06 msekoran Exp $"
+# "@(#) $Id: Makefile,v 1.62 2013/03/04 10:36:06 msekoran Exp $"
 #
 # Makefile of ........
 #
@@ -53,7 +53,7 @@ SCRIPTS         = \
 		acsLoggingService \
 		acsManager \
 		acsNamingService \
-		acsNotifyService \
+		acsNotifyService acsstartupNotifyServiceStart \
 		acsAlarmService \
 		acsStartContainerWithCASA \
 		acsstartupNotifyPortViaErrorCode \
