--- a/LGPL/Kit/acstempl/forCoding/c++-h-file.template
+++ b/LGPL/Kit/acstempl/forCoding/c++-h-file.template
@@ -1,7 +1,7 @@
 #%#------------------------------------------------------------------------
 #%# E.S.O. - ACS project
 #%# 
-#%# "@(#) $Id: c++-h-file.template,v 1.20 2002/12/05 19:09:18 vltsccm Exp $"
+#%# "@(#) $Id: c++-h-file.template,v 1.21 2013/03/14 11:59:17 mpasquat Exp $"
 #%# 
 #%# Template for c++ .h include files         
 #%# 
@@ -24,7 +24,6 @@
 /*******************************************************************************
 * PPPPPPPP
 *
-* "@(#) $I>-<d$"
 *
 * who       when      what
 * --------  --------  ----------------------------------------------
