--- a/LGPL/Kit/acstempl/forCoding/h-file.template
+++ b/LGPL/Kit/acstempl/forCoding/h-file.template
@@ -1,7 +1,7 @@
 #%#------------------------------------------------------------------------
 #%# E.S.O. - ACS project
 #%# 
-#%# "@(#) $Id: h-file.template,v 1.21 2004/01/11 06:31:35 mzampare Exp $" 
+#%# "@(#) $Id: h-file.template,v 1.22 2013/03/14 11:59:17 mpasquat Exp $" 
 #%# 
 #%# Template for .h include files         
 #%# 
@@ -26,7 +26,6 @@
 /*******************************************************************************
 * PPPPPPPP
 *
-* "@(#) $I>-<d$"
 *
 * who       when      what
 * --------  --------  ----------------------------------------------
