--- a/LGPL/Kit/acstempl/forCoding/interface-file.template
+++ b/LGPL/Kit/acstempl/forCoding/interface-file.template
@@ -1,7 +1,7 @@
 #%#------------------------------------------------------------------------
 #%# E.S.O. - ACS project
 #%# 
-#%# "@(#) $Id: interface-file.template,v 1.20 2002/12/05 19:09:21 vltsccm Exp $" 
+#%# "@(#) $Id: interface-file.template,v 1.21 2013/03/14 11:59:17 mpasquat Exp $" 
 #%# 
 #%# Template for .h interface file        
 #%# 
@@ -25,7 +25,6 @@
 /*******************************************************************************
 * PPPPPPPP
 *
-* "@(#) $I>-<d$"
 *
 * who       when      what
 * --------  --------  ----------------------------------------------
