--- a/LGPL/Kit/acstempl/forCoding/pythonModule.template
+++ b/LGPL/Kit/acstempl/forCoding/pythonModule.template
@@ -1,7 +1,7 @@
 #%#------------------------------------------------------------------------
 #%# E.S.O. - ACS project
 #%# 
-#%# "@(#) $Id: pythonModule.template,v 1.2 2004/10/05 03:24:16 srankin Exp $" 
+#%# "@(#) $Id: pythonModule.template,v 1.3 2013/03/14 11:59:17 mpasquat Exp $" 
 #%# 
 #%# Template for Python module files          
 #%# 
@@ -23,7 +23,6 @@
 #*******************************************************************************
 # PPPPPPPP
 #
-# "@(#) $I>-<d$"
 #
 # who       when      what
 # --------  --------  ----------------------------------------------
