--- a/LGPL/Kit/acstempl/forCoding/dbl-file.template
+++ b/LGPL/Kit/acstempl/forCoding/dbl-file.template
@@ -1,7 +1,7 @@
 #%#------------------------------------------------------------------------
 #%# E.S.O. - ACS project
 #%# 
-#%# "@(#) $Id: dbl-file.template,v 1.20 2002/12/05 19:09:20 vltsccm Exp $"
+#%# "@(#) $Id: dbl-file.template,v 1.21 2013/03/14 11:59:17 mpasquat Exp $"
 #%# 
 #%# Template for dbl files         
 #%# 
@@ -24,7 +24,6 @@
 //**********************************************************************
 //* E.S.O. - ACS project
 //*
-//* "@(#) $I>-<d$"
 //*
 //* who       when      what
 //* --------  --------  ----------------------------------------------
