--- a/LGPL/Kit/acstempl/forCoding/java-class-interface.template
+++ b/LGPL/Kit/acstempl/forCoding/java-class-interface.template
@@ -1,7 +1,7 @@
 #%#------------------------------------------------------------------------
 #%# E.S.O. - ACS project
 #%# 
-#%# "@(#) $Id: java-class-interface.template,v 1.2 2007/02/12 09:12:47 nbarriga Exp $"
+#%# "@(#) $Id: java-class-interface.template,v 1.3 2013/03/14 11:59:17 mpasquat Exp $"
 #%# 
 #%# Template for java class interface documentation header include files         
 #%# 
@@ -20,7 +20,6 @@ PPPPPPPP
 */
 /** 
  * @author  NNNNNNNN
- * @version $Id: java-class-interface.template,v 1.2 2007/02/12 09:12:47 nbarriga Exp $
  * @since    
  */
 
