--- a/LGPL/Kit/acstempl/forCoding/tclScript.template
+++ b/LGPL/Kit/acstempl/forCoding/tclScript.template
@@ -1,7 +1,7 @@
 #%#------------------------------------------------------------------------
 #%# E.S.O. - ACS project
 #%# 
-#%# "@(#) $Id: tclScript.template,v 1.21 2004/10/05 03:24:16 srankin Exp $" 
+#%# "@(#) $Id: tclScript.template,v 1.22 2013/03/14 11:59:17 mpasquat Exp $" 
 #%# 
 #%# Template for Tcl/Tk script files          
 #%# 
@@ -22,7 +22,6 @@
 #*******************************************************************************
 # PPPPPPPP
 #
-# "@(#) $I>-<d$"
 #
 # who       when      what
 # --------  --------  ----------------------------------------------
