--- a/LGPL/acsBUILD/config/svc.conf/defaultNotify.svc.conf
+++ b/LGPL/acsBUILD/config/svc.conf/defaultNotify.svc.conf
@@ -1,4 +1,6 @@
-dynamic TAO_MonitorAndControl Service_Object * TAO_CosNotification_MC:_make_TAO_MonitorAndControl () "-NoNameSvc -o MC_IOR"
+dynamic TAO_MonitorAndControl Service_Object * TAO_CosNotification_MC:_make_TAO_MonitorAndControl () "-NoNameSvc -o MC_IOR -ORBArg -ORBDottedDecimalAddresses -ORBArg 1"
 dynamic TAO_MC_Notify_Service Service_Object * TAO_CosNotification_MC_Ext:_make_TAO_MC_Notify_Service () ""
+
 # dynamic Topology_Factory Service_Object * TAO_CosNotification_Persist:_make_TAO_Notify_XML_Topology_Factory () "-base_path INS_DIR/reconnect_cache_NS_TYPE"
+
 static Notify_Default_Event_Manager_Objects_Factory "-AllocateTaskPerProxy -SourceThreads 1 -DispatchingThreads 1 -ValidateClient -ValidateClientInterval 60"
