- Fixed the product file so that the eventGUI can be started also from the command line:   - Brought back the launcher name (had disappeared somehow in the e4 porting)   - Added org.eclipse.swt fragments for linux.x86_64, linux.x86, win32.x86 - Cleaned up the eventGUI start script (IFR and related variables) - Cleaned up Makefile (removed obsolete ACSDATA patch for eventGUI.ini)
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@188552 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acsGUIs/eventGUI/src/Makefile
+++ b/LGPL/CommonSoftware/acsGUIs/eventGUI/src/Makefile
@@ -114,13 +114,10 @@ man   : do_man
 
 install : install_all
 	@INSTALL_DIR=$$(searchFile bin/eventGUI); \
+	 echo "Will install to $$INSTALL_DIR/lib/ACS_eventGUI"; \
 	 cd $$INSTALL_DIR/lib; \
 	 rm -rf ACS_eventGUI; \
-	 unzip -o $(PWD)/../object/headlessTemp/I.eventGUIBuild/eventGUIBuild-linux.gtk.$(ZIP_SUFFIX).zip; \
-	 cd ACS_eventGUI; \
-	 acsdata=$$(echo $$ACSDATA | sed s/\\//\\\\\\\//g); \
-	 sed s/ACSDATA-DIR/$$acsdata/g eventGUI.ini > eventGUI.ini.new; \
-	 mv eventGUI.ini.new eventGUI.ini
+	 unzip -o $(PWD)/../object/headlessTemp/I.eventGUIBuild/eventGUIBuild-linux.gtk.$(ZIP_SUFFIX).zip;
 	@echo " . . . installation done"
 
 
