--- a/LGPL/CommonSoftware/acsGUIs/eventGUI/src/project.properties
+++ b/LGPL/CommonSoftware/acsGUIs/eventGUI/src/project.properties
@@ -13,7 +13,7 @@
 pluginID=ACS_eventGUI
 
 ## Required ACS/ALMA jars are all packed together
-acs.jars.plugin=alma.acs.rcp.jars
+acs.jars.plugin=alma.acs.rcp.jars_2_0_0
 
 ## The list of ACS/ALMA jars required by this RCP
 ## These jars must be found in INTROOT/ACSROOT/JACORB_HOME
