Cleaned empty dirs and fixed eclipse classpath in typesafe logging modules.
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@188700 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/loggingts/.classpath
+++ b/LGPL/CommonSoftware/loggingts/.classpath
@@ -22,5 +22,6 @@
 	<classpathentry kind="var" path="ACSROOT/lib/acserr.jar"/>
 	<classpathentry kind="lib" path="ws/lib/ACSLogTypeExampleLTS.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/lc.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/lcEngine.jar"/>
 	<classpathentry kind="output" path="object/eclipseOut"/>
 </classpath>
