- Changes to the java test client:   - Added test output using the static log message (with logger and all params as arguments) and using the new way of chaining setters.   - Renamed from testLTSClient to LtsTestClient   - Made it more explicit that we use ComponentClient only in order to use a remote logger. - Tests use uppercase log names (defined in LogDefinition#logName), as it is customary usage. - Improved test/Makefile clean
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@188765 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/loggingts/.classpath
+++ b/LGPL/CommonSoftware/loggingts/.classpath
@@ -23,5 +23,8 @@
 	<classpathentry kind="lib" path="ws/lib/ACSLogTypeExampleLTS.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/lc.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/lcEngine.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/acsContainerServices.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/logging_idl.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/acsCallbacksSupport.jar"/>
 	<classpathentry kind="output" path="object/eclipseOut"/>
 </classpath>
