jlogLongRunTest  script added to run the java log generator from the command line.
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@188777 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/jlogEngine/test/Makefile
+++ b/LGPL/CommonSoftware/jlogEngine/test/Makefile
@@ -75,7 +75,8 @@ SCRIPTS_L       =	jlogLogEntryTest \
 					jlogTestEngineCacheNotification \
 					jlogTestFilter \
 					jlogTestFiltersVector \
-					jlogStressCacheFile
+					jlogStressCacheFile \
+					jlogLongRunTest
 
 #>>>>> END OF standard rules
   
