Added missing jars (COMP-9109)
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@188944 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/ACSLaser/AlarmsProfiler/src/project.properties
+++ b/LGPL/CommonSoftware/ACSLaser/AlarmsProfiler/src/project.properties
@@ -27,11 +27,13 @@ acs.jars.required  = \
   acsjms.jar \
   acsnc.jar \
   acsncErrType.jar \
+  acsncSchemaBindings.jar \
   acsAlarmClients.jar \
   acsAlarmService.jar \
   acsASsources.jar \
   acsContainerServices.jar \
   acsErrTypeAlarmSourceFactory.jar \
+  acsErrTypeLifeCycle.jar \
   alarmsysteminterface.jar \
   avalon-framework.jar \
   AcsAlarmSystem.jar \
@@ -47,7 +49,11 @@ acs.jars.required  = \
   cdbDAL.jar \
   cdbErrType.jar \
   cmwmom.jar \
+  commons-beanutils-1.8.3.jar \
+  commons-digester-2.1.jar \
   commons-logging-1.1.1.jar \
+  commons-jexl-1.1.jar \
+  commons-scxml-0.9.jar \
   CDB.jar \
   jacorb.jar \
   jcont.jar \
@@ -69,4 +75,5 @@ acs.jars.required  = \
   NotifyMonitoringExt.jar \
   repeatGuard.jar \
   selector-1.1.jar \
+  xalan.jar \
   xercesImpl.jar
