- Checked and fixed tests #0 - #20 (except for #18), see JIRA:COMP-9163   - A lot of changes came from adding level DELOUSE, where TRACE level is now represented by integer 1 instead of 2. - Main JUnit test class now uses simple name, yielding more readable stdout logs with source object fields such as   [TestLogLevelsCompTest#testLoggingConfigurableCentralLogLevels]   instead of   [alma.contLogTest.TestLogLevelsCompImpl.TestLogLevelsCompTest#testLoggingConfigurableCentralLogLevels]
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@189489 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/containerTests/contLogTest/test/Makefile
+++ b/LGPL/CommonSoftware/containerTests/contLogTest/test/Makefile
@@ -79,7 +79,7 @@ all:	do_all
 	@echo " . . . 'all' done" 
 
 clean : clean_all 
-	$(RM) *~ ../idl/*~ ../*~ *.rep *.out core tmp
+	$(RM) *~ ../idl/*~ ../*~ *.rep *.out core tmp tatlogs sed\.scan
 	@echo " . . . clean done"
 
 clean_dist : clean_all clean_dist_all 
