Followed JIRA:COMP-8713 changes.
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@189744 523d945c-050c-4681-91ec-863ad3bb968a

--- a/Benchmark/util/.classpath
+++ b/Benchmark/util/.classpath
@@ -23,5 +23,6 @@
 	<classpathentry kind="var" path="ACSROOT/lib/cdbErrType.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acscommon.jar"/>
 	<classpathentry kind="var" path="JACORB_HOME/lib/jacorb.jar" sourcepath="JACORB_HOME/src"/>
+	<classpathentry kind="var" path="ACSROOT/lib/logging_idl.jar"/>
 	<classpathentry kind="output" path="object/eclipseOut"/>
 </classpath>
