Followed JIRA:COMP-8713 changes.
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@189750 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/containerTests/contLogTest/.classpath
+++ b/LGPL/CommonSoftware/containerTests/contLogTest/.classpath
@@ -43,5 +43,7 @@
 	<classpathentry kind="lib" path="lib/contLogTest_IF.jar"/>
 	<classpathentry kind="lib" path="lib/typeSafeLogsLTS.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/lcEngine.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/commons-lang-2.5.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/logging_idl.jar"/>
 	<classpathentry kind="output" path="object/eclipseOut"/>
 </classpath>
