COMP-9260: Added testNotificationServiceConfiguration test to test the new Notification Service Factory name concept
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@189842 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acsnc/ws/test/Makefile
+++ b/LGPL/CommonSoftware/acsnc/ws/test/Makefile
@@ -41,7 +41,7 @@ testChannelCreation_LIBS    =	acsnc maciClient acsncHelperTest
 
 SCRIPTS_L       = acsncTATRunTest.sh
 
-PY_SCRIPTS_L =	acsncTestConSup
+PY_SCRIPTS_L =	acsncTestConSup acsncTestSimpleComponent
 
 # Includes (.h) files (public and local)
 # ---------------------------------
