(1) Implemented XSD schema check that baci properties may only be used in xsd elements that inherit from baci:CharacteristicComponent (see JIRA:COMP-3752).     This functionality is encapsulated inside BaciSchemaChecker, which uses the com.sun.xml.internal.xsom parser and schema object model     to traverse nested elements, their types, and the type inheritance hierarchies. (2) Fixed a bug in CDBChecker that lead to reporting "CDBChecker exiting. No errors found"     when there were previous errors but a later component/container impl lang match succeeded. (3) Added a cache to CDBSchemasResolver. Now a shared resolver instance gets used for xsd validation (and beyond, probably by a prior coding accident).     Added a mode to resolve any schema resource, not just those starting with "http://", which could anyway be a bug in the existing code. (4) A bit of code clean-up. A lot more could be done.
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@190014 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/cdbChecker/src/Makefile
+++ b/LGPL/CommonSoftware/cdbChecker/src/Makefile
@@ -37,45 +37,15 @@
 # Jarfiles and their directories
 #
 JARFILES=cdbChecker 
-cdbChecker_DIRS = cl
+cdbChecker_DIRS = cl alma
 
-#
-## This will have to be replaced by:
-# JAVA_ENDORSED=1
-# # when implemented
-# #
-XERCES_JAR = $(shell if [ -f $(INTROOT)/lib/endorsed/xercesImpl.jar ]; then \
-echo $(INTROOT)/lib/endorsed/xercesImpl.jar; \
-else \
-echo $(ACSROOT)/lib/endorsed/xercesImpl.jar; \
-fi;)
-XMLPARSER_JAR = $(shell if [ -f $(INTROOT)/lib/endorsed/xmlParserAPIs.jar ]; then \
-echo $(INTROOT)/lib/endorsed/xmlParserAPIs.jar; \
-else \
-echo $(ACSROOT)/lib/endorsed/xmlParserAPIs.jar; \
-fi;)
-CLASSPATH := $(XERCES_JAR)$(PATH_SEP)$(CLASSPATH)
+# Add tools.jar so that javac will find the XSOM classes
+CLASSPATH := $(JAVA_HOME)/lib/tools.jar$(PATH_SEP)$(CLASSPATH)
 
 #
 # java sources in Jarfile on/off
 DEBUG = on 
 
-#
-# ACS XmlIdl generation on/off
-#
-XML_IDL= 
-#
-# Java Component Helper Classes generation on/off
-#
-COMPONENT_HELPERS=
-#
-# Java Entity Classes generation on/off
-#
-XSDBIND=
-#
-# Schema Config files for the above
-#
-XSDBIND_INCLUDE=
 
 INSTALL_FILES= 	../lib/java-getopt-1.0.12.jar ../config/reqSchemas.xml \
 		../config/reqSchemas.xsd
