--- a/LGPL/CommonSoftware/cdbChecker/.project
+++ b/LGPL/CommonSoftware/cdbChecker/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>cdbChecker</name>
+	<name>ACS_cdbChecker</name>
 	<comment></comment>
 	<projects>
 	</projects>
