Added ENDORSED flag fro cdbChecker.jar, since on NRI there were build errors about org.apache.xerces.parsers.SAXParser not found. Unclear why this problem does not occur elsewhere.
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@190077 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/cdbChecker/src/Makefile
+++ b/LGPL/CommonSoftware/cdbChecker/src/Makefile
@@ -38,6 +38,7 @@
 #
 JARFILES=cdbChecker 
 cdbChecker_DIRS = cl alma
+cdbChecker_ENDORSED = on
 
 # Add tools.jar so that javac will find the XSOM classes
 CLASSPATH := $(JAVA_HOME)/lib/tools.jar$(PATH_SEP)$(CLASSPATH)
