- Fixed TAT tests - BaciSchemaChecker reuses CDBErrorHandler   - Removed strange omission of the xsd file name in the fatalError reporting when verbose flag is set. - SAXException from BaciSchemaChecker not printed, to avoid duplicate error reporting with xerces.
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@190148 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/cdbChecker/test/Makefile
+++ b/LGPL/CommonSoftware/cdbChecker/test/Makefile
@@ -68,7 +68,7 @@ all:	do_all
 	@echo " . . . 'all' done" 
 
 clean : clean_all 
-	rm -f sed.scan
+	rm -rf sed.scan tatlogs tmp
 	@echo " . . . clean done"
 
 clean_dist : clean_all clean_dist_all 
