Added a test for JIRA:COMP-3752 (bad xsd without inheritance from CharacteristicComponent)
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@190162 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/cdbChecker/test/Makefile
+++ b/LGPL/CommonSoftware/cdbChecker/test/Makefile
@@ -45,7 +45,8 @@ SCRIPTS         =
 SCRIPTS_L       = test-acsexmpl.sh test-basic.sh \
                   test-defaultCDB.sh  test-ITS.sh test-subsystems.sh \
                   test-defaultCDB-withcheckerscript.sh test-interfaceRepository.sh \
-                  test-fileEncoding.sh prologue.sh epilogue.sh
+                  test-fileEncoding.sh test-characteristicComponent.sh \
+                  prologue.sh epilogue.sh
 
 #
 #>>>>> END OF standard rules
